force-app/main/default/objects/IK_Location__c/IK_Location__c.object-meta.xml
<CustomObject>
    <label>IK_Location</label>
    <nameField>
        <label>IK_Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IK_Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>