force-app/main/default/objects/IK_Location__c/fields/Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>Abbreviated_Name__c</fullName>
    <label>Abbreviated Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>