force-app/main/default/objects/IK_Location__c/fields/Argus_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Argus_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Argus Reporting</label>
    <type>Checkbox</type>
</CustomField>