force-app/main/default/objects/IK_Location__c/fields/Barge_Cargo_Region__c.field-meta.xml
<CustomField>
    <fullName>Barge_Cargo_Region__c</fullName>
    <label>Barge/Cargo Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>