force-app/main/default/objects/IK_Location__c/fields/Dachbook_Region__c.field-meta.xml
<CustomField>
    <fullName>Dachbook_Region__c</fullName>
    <label>Dachbook Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>