force-app/main/default/objects/IK_Location__c/fields/LOC_Type__c.field-meta.xml
<CustomField>
    <fullName>LOC_Type__c</fullName>
    <label>LOC Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>