force-app/main/default/objects/IK_Location__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Depot Location</fullName>
            </value>
            <value>
                <fullName>Shell Own Location</fullName>
            </value>
            <value>
                <fullName>3rd Party Rail Sources</fullName>
            </value>
            <value>
                <fullName>3rd Party Truck Sources</fullName>
            </value>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Refinery</fullName>
            </value>
            <value>
                <fullName>Gantry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>