force-app/main/default/objects/IK_Location__c/fields/LocDiff__c.field-meta.xml
<CustomField>
    <fullName>LocDiff__c</fullName>
    <label>LocDiff</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>