force-app/main/default/objects/IK_Location__c/fields/Minimum_ATP2__c.field-meta.xml
<CustomField>
    <fullName>Minimum_ATP2__c</fullName>
    <label>Minimum ATP2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>