force-app/main/default/objects/IK_Location__c/fields/MoT__c.field-meta.xml
<CustomField>
    <fullName>MoT__c</fullName>
    <label>MoT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Cargo</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>