force-app/main/default/objects/IK_Location__c/fields/MoT_SFDC__c.field-meta.xml
<CustomField>
    <fullName>MoT_SFDC__c</fullName>
    <label>MoT SFDC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>