force-app/main/default/objects/IK_Location__c/fields/OMR_Region__c.field-meta.xml
<CustomField>
    <fullName>OMR_Region__c</fullName>
    <label>OMR Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Rhine-Main</fullName>
            </value>
            <value>
                <fullName>Seefeld</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>