force-app/main/default/objects/IK_Location__c/fields/Online_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_Location_Name__c</fullName>
    <label>Online Location Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>