force-app/main/default/objects/IK_Location__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <label>Plant Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>