force-app/main/default/objects/IK_Location__c/fields/Products_Availability__c.field-meta.xml
<CustomField>
    <fullName>Products_Availability__c</fullName>
    <label>Products Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>IGO Austria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>