force-app/main/default/objects/IK_Location__c/fields/S_H__c.field-meta.xml
<CustomField>
    <fullName>S_H__c</fullName>
    <label>S&amp;H</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>