force-app/main/default/objects/IK_Location__c/fields/Scenario_Type__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Type__c</fullName>
    <label>Scenario Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>