force-app/main/default/objects/IK_Location__c/fields/Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Conditions__c</fullName>
    <label>Shipping Conditions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>