force-app/main/default/objects/IK_Location__c/fields/Shipping_Conditions_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Conditions_Name__c</fullName>
    <formula>CASE(Shipping_Conditions__c,
10, &quot;Road Pickup&quot;,
11, &quot;Road Delivery&quot;,
21, &quot;Rail Delivery&quot;,
30, &quot;Vessel Pickup&quot;,
31, &quot;Vessel Delivery&quot;,
20, &quot;Rail Pickup&quot;,
80, &quot;In-Tank&quot;,
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Conditions Name</label>
    <type>Text</type>
</CustomField>