force-app/main/default/objects/IK_Location__c/fields/Supply_Type__c.field-meta.xml
<CustomField>
    <fullName>Supply_Type__c</fullName>
    <label>Supply Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>