force-app/main/default/objects/IK_Location__c/fields/Throughput_fee__c.field-meta.xml
<CustomField>
    <fullName>Throughput_fee__c</fullName>
    <label>Throughput fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>